# tof-reco

./: .gitignore  .gitmodules  AnalysisSettings.json  CMakeLists.txt  CheckTree.sh  DataConverter.C  DisplayWaveforms.sh  GenerateRootFile.cpp  GenerateRootFile.sh  HitAnalysis.C  Makefile  README.md  ReadRootFile.cpp  ReadRootFile.sh  ReadTree.C  Test.sh  TofEvent.cpp  TofHit.cpp  TofHit.h  TofObjects.C_old  TofObjects.h_old  TofObjectsDict.cpp  TofObjectsDict_rdict.pcm  TofRun.cpp  TofSignal.cpp  WFDisplay.C  anaTofData.sh  compareTofRuns.sh  generateRootFile.sh  main.cpp  my_program  notesEV.txt  readTofData.sh  update.sh
cmake/: dependencies.cmake  submoduleLibs.cmake  submodules.cmake
include/: TofEvent.h  TofHit.h  TofRun.h  TofSignal.h
misc/: DisplayEvents.sh  EventDisplay.C  GenerateRootFile.sh  old_Makefile
src/: TofEvent.cpp  TofHit.cpp  TofObjectsDict.cpp  TofObjectsDict_rdict.pcm  TofRun.cpp  TofSignal.cpp
src/app/: CMakeLists.txt
src/app/src/: anaToFData.cpp  compareTofRuns.cpp  readTofData.cpp  tofPrintData.cpp  tofRootConverter.cpp
src/midasReader/: CMakeLists.txt
src/midasReader/include/: MidasInterface.h
src/midasReader/src/: MidasInterface.cpp
src/tofRecoClasses/: CMakeLists.txt
src/tofRecoClasses/include/: TofEvent.h  TofHit.h  TofObjectsDict.h  TofRun.h  TofSignal.h
src/tofRecoClasses/src/: TofEvent.cpp  TofHit.cpp  TofRun.cpp  TofSignal.cpp
